# CppCallTracing

./: CMakeLists.txt  LICENSE.md  README.md  build.sh  expected.txt  run.sh
Test/: main.cpp  test.cpp  test.h  test_interface.cpp  test_interface.h  traced_functions.yml  tracing_callouts.cpp  tracing_callouts.h
Tracing/: CMakeLists.txt  generate_callouts.py  generate_callouts.sh  generate_wrappers.py  generate_wrappers.sh  launchcxx.in  parse_compile_commands.py  parse_compile_commands.sh  vtable_update_info.py  wrapper_info.py
Tracing/generators/: callout_declaration_generator.py  callout_definition_generator.py  utils.py  vtable_update_generator_clang.py  vtable_update_generator_gcc.py  wrapper_generator.py
Tracing/parsers/: __init__.py  function_info.py  generated_file_parser.py  parameters.py  parser_function_list.py  parser_nm.py  parser_structure_clang.py  parser_structure_gcc.py  user_code_info.py  utils.py  vtable_info.py
